/*
 * Copyright 2024 Sowers, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option go_package = "bosca.io/api/protobuf/bosca/workflow";

import "google/api/annotations.proto";
import "bosca/workflow/workflows.proto";
import "bosca/workflow/models.proto";
import "bosca/workflow/prompts.proto";
import "bosca/workflow/storage_systems.proto";
import "bosca/workflow/transitions.proto";
import "bosca/workflow/activities.proto";
import "bosca/workflow/execution_context.proto";
import "bosca/empty.proto";
import "bosca/requests.proto";

package bosca.workflow;

service WorkflowQueueService {

  rpc Enqueue(WorkflowEnqueueRequest) returns (WorkflowEnqueueResponse) {
    option (google.api.http) = {
      get: "/v1/workflow/enqueue"
    };
  }
}

